Fix test overlap on small screen size
TODO: Generics - Chapter 3 - In Progress - Naftalin

--- a/WordleCheater/grid-trial-style.css
+++ b/WordleCheater/grid-trial-style.css
@@ -332,3 +332,11 @@ input[type="text"]{
         font-size: 10px;
     }
 }
+@media (max-width: 370px) {
+    .letter-text{
+        font-size: 9px;
+    }
+    .checkbox-text{
+        font-size: 9px;
+    }
+}
